# mpu9250

project/esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
project/esp32/components/mpu9250/: CMakeLists.txt
project/esp32/components/mpu9250/interface/: esp32_driver_mpu9250_interface.c
project/esp32/main/: console.c  main.cpp
project/esp32c3/: Makefile  sdkconfig  sdkconfig.old
project/esp32c3/components/mpu9250/interface/: esp32_driver_mpu9250_interface.c  gpio.c  gpio.h
project/esp32c3/main/: main.cpp
src/: driver_mpu9250.c
